--- a/docs/index.dox
+++ b/docs/index.dox
@@ -1,6 +1,6 @@
 /** @mainpage HTML Forms
 
-This is a C/C++ library for `com.gulachek.html-forms` clients. The functions are documented in @ref html-forms.h and there are several examples to explore.
+This is a C/C++ library for `com.gulachek.html-forms` clients. The functions are documented in @ref html_forms.h and there are several examples to explore.
 
 @example tarball/main.c
 @example mime_swap/main.c
